change links to opensdn-io project
Change-Id: I7e986d058609041a5509d1af91b59bbe9ff1d332
Signed-off-by: tikitavi <rtikitavi@gmail.com>

--- a/INFO.yaml
+++ b/INFO.yaml
@@ -31,7 +31,7 @@ meetings:
       repeats: ''
       time: ''
 repositories:
-    - tungstenfabric/tf-devstack
+    - opensdn-io/tf-devstack
 committers:
     - <<: *tungstenfabric_tf-devstack_ptl
     - name: 'Alexandre Levine'
